[gd_scene load_steps=3 format=3 uid="uid://b2u3nju462sal"]

[ext_resource type="Script" uid="uid://b46grrhu40os3" path="res://spawners/enemy_spawner.gd" id="1_6tnyv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcm8v"]
size = Vector2(420, 230)

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_6tnyv")
spawn_interval = 0.5
max_enemies = 20

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource("RectangleShape2D_wcm8v")
